<resources>
    <string name="app_name">uControl Companion</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nintendo_logo">Nintendo Logo</string>
    <string name="playstation_logo">Playstation Logo</string>
    <string name="xbox_logo">Xbox Logo</string>
    <string name="emulated_logo">Emulated Logo</string>
    <string name="emulated">Emulated</string>
    <string name="select_controller">Select Controller</string>
    <string name="paired_controller">Select Controller</string>
    <string name="change_controller">Change Controller</string>
    <string name="desired_console">Select Console</string>
    <string name="change_console">Change Console</string>
    <string name="current_controller">No controller selected</string>
    <string name="current_console">No console selected</string>
    <string name="ucontrol_logo">uControl Logo</string>
    <string name="send_configuration">Send Configuration</string>
    <string name="select_console">Select Console</string>
    <string name="address_label">uControl Address</string>
    <string name="scan_for_ucontrol">Scan for uControl</string>
    <string name="ucontrol_address">No uControl found</string>
    <string name="pair_controller">Pair Controller</string>
    <string-array name="inputs">
        <item>PS5 (Dualsense)</item>
        <item>PS4 (Dualshock 4)</item>
        <item>Xbox One S</item>
        <item>Nintendo Switch Pro Controller</item>
        <item>Nintendo Wii U Pro Controller</item>
        <item>Nintendo Wii Remote</item>
    </string-array>
    <string-array name="outputs">
        <item>HID</item>
        <item>Playstation</item>
        <item>Xbox</item>
        <item>Nintendo Switch</item>
        <item>Wii</item>
    </string-array>
</resources>