<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/nsLogo"
        android:layout_width="170dp"
        android:layout_height="189dp"
        android:layout_marginTop="48dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/psLogo"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emuText"
        app:srcCompat="@drawable/ic_nintendo_switch_logo"
        android:contentDescription="@string/nintendo_logo"/>

    <ImageView
        android:id="@+id/psLogo"
        android:layout_width="178dp"
        android:layout_height="192dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emuText"
        app:srcCompat="@drawable/ic_playstation"
        android:contentDescription="@string/playstation_logo"/>

    <ImageView
        android:id="@+id/xbLogo"
        android:layout_width="162dp"
        android:layout_height="156dp"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/emuLogo"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nsLogo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_xbox_logo"
        android:contentDescription="@string/xbox_logo"/>

    <ImageView
        android:id="@+id/emuLogo"
        android:layout_width="146dp"
        android:layout_height="135dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="@+id/xbLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/nsLogo"
        app:layout_constraintTop_toBottomOf="@+id/psLogo"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/ic_smartphone_touch_screen_svgrepo_com"
        app:tint="@color/black"
        android:contentDescription="@string/emulated_logo"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="96dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/emulated"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emuLogo"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/emuLogo"
        app:layout_constraintTop_toBottomOf="@+id/emuLogo"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/emuText"
        android:layout_width="315dp"
        android:layout_height="79dp"
        android:layout_marginTop="28dp"
        android:text="@string/select_controller"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>