<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/nsLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/nintendo_logo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/psLogo"
        app:layout_constraintEnd_toStartOf="@+id/psLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/psLogo"
        app:srcCompat="@drawable/ic_nintendo_switch_logo" />

    <ImageView
        android:id="@+id/psLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/playstation_logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/xbLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nsLogo"
        app:layout_constraintTop_toBottomOf="@+id/emuText"
        app:srcCompat="@drawable/ic_playstation" />

    <ImageView
        android:id="@+id/xbLogo"
        android:layout_width="162dp"
        android:layout_height="0dp"
        android:layout_marginBottom="141dp"
        android:contentDescription="@string/xbox_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psLogo"
        app:srcCompat="@drawable/ic_xbox_logo" />

    <TextView
        android:id="@+id/emuText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="124dp"
        android:text="@string/select_console"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/psLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>